--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,8 +3,13 @@ stdout_callback = yaml
 deprecation_warnings = False
 host_key_checking = False
 retry_files_enabled = False
-inventory = inventory/hosts
 collections_paths = ./collections
+
+
+[persistent_connection]
+connect_timeout = 200
+command_timeout = 200
+
 
 [galaxy]
 
