fix the source key for roles

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,4 +1,4 @@
 roles:
   # Install a role from Ansible Galaxy.
   - name: geerlingguy.haproxy
-    source: https://galaxy.ansible.com
+    src:  https://galaxy.ansible.com
